--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Hello World.', 'Console Text', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Hello World.','Sveicinām visus vārda dienā!', 'There is no god', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
