Changed the font to not make weird letters

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Hello</title>
 
   <style>
-    @import url(https://fonts.googleapis.com/css?family=Khula:700);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
     body {
       background: #111;
@@ -19,7 +19,7 @@
     }
 
     .console-container {
-      font-family: Khula;
+      font-family: 'Roboto', sans-serif;
       font-size: 4em;
       text-align: center;
       height: 200px;
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Hello World.','Sveicinam visus varda diena!', 'There is no god', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Hello World.','Sveicinam visus vārda dienā!', 'There is no god', 'Made with Love.'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
